[tool.poetry]
name = "bosh-chat"
version = "0.1.0"
description = ""
authors = ["avinash8419 <avihanvaisri@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.1.20"
qdrant-client = "^1.9.1"
pypdf = "^4.2.0"
torch = "^2.3.0"
sentence-transformers = "^2.7.0"
pydantic = "^2.7.1"
unstructured = {extras = ["all-docs"], version = "^0.13.7"}
pdf2image = "^1.17.0"
pdfminer = "^20191125"
pdfplumber = "^0.11.0"
poppler-utils = "^0.1.0"
timm = "^1.0.3"
streamlit = "^1.34.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
